conserto do erro do saiba mais

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </picture>
             <h1>A LINGUAGEM DE PROGRAMAÇÃO MAIS <span>FÁCIL</span></h1>
             <p>Uma linguagem simples, e prática, recomendada por muitos professores para iniciantes na programação</p>
-            <a href="#">Saiba mais</a>
+            <div><a href="#">Saiba mais</a></div>
             
             <article id="introducao">
                 <h2>Programação</h2>
