edição dos artigos

--- a/index.html
+++ b/index.html
@@ -38,12 +38,14 @@
                 <h2>Programação</h2>
                 <p>Muitos querem aprender a programar, mas no início muitas pessoas acham que isso é algo só para os "gênios", ou que tem que saber muita matemática, mas não é bem assim!</p>
                 <p>Qualquer um pode começar a aprender programação, inclusive você!</p>
+                <img src="imagens/imagem1.webp" alt="Imagem de exemplo 1">
             </article>
 
-            <article id="Desenvolvimento">
+            <article id="desenvolvimento">
                 <h2>A linguagem Python</h2>
                 <p>Bom, de todas as linguagens de programação, o python é considerada a mais simples e prática para iniciantes, ela possui bibliotecas incríveis que fazem o python ser ainda mais útil.</p>
                 <p>O python possui uma sintaxe símples, o que ajuda e muito os iniciantes, é sobre essa linguagem maravilhosa que estarei ensinando meus conhecimentos para você, de forma simples, resumida, e com projetos incríveis, como, um algoritmo que valida cpf, um tipo de spotify, um algoritmo para de login simples, e muitos outros!</p>
+                <img src="imagens/imagem2.webp" alt="imagem de exemplo 2">
             </article>
         </section>
 
